[gd_scene load_steps=25 format=3 uid="uid://dya8x7lbkk707"]

[ext_resource type="Script" path="res://scripts/traveling_merchant.gd" id="1_gh2xp"]
[ext_resource type="Texture2D" uid="uid://b3i4rx4rqg7nb" path="res://assets/MinifolksVillagers/Blue/Outline/MiniMerchantB.png" id="2_ih26j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jvtob"]
atlas = ExtResource("2_ih26j")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbnni"]
atlas = ExtResource("2_ih26j")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_htxhk"]
atlas = ExtResource("2_ih26j")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nv031"]
atlas = ExtResource("2_ih26j")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3cwt"]
atlas = ExtResource("2_ih26j")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3t2m"]
atlas = ExtResource("2_ih26j")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gkdu"]
atlas = ExtResource("2_ih26j")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivb5y"]
atlas = ExtResource("2_ih26j")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf5nj"]
atlas = ExtResource("2_ih26j")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjrg7"]
atlas = ExtResource("2_ih26j")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tb86j"]
atlas = ExtResource("2_ih26j")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1ifk"]
atlas = ExtResource("2_ih26j")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktqkp"]
atlas = ExtResource("2_ih26j")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx1x8"]
atlas = ExtResource("2_ih26j")
region = Rect2(224, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_luxij"]
atlas = ExtResource("2_ih26j")
region = Rect2(256, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_urfwe"]
atlas = ExtResource("2_ih26j")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6oxjb"]
atlas = ExtResource("2_ih26j")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3wdj"]
atlas = ExtResource("2_ih26j")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_60vs3"]
atlas = ExtResource("2_ih26j")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kfu48"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvtob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbnni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htxhk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nv031")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3cwt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3t2m")
}],
"loop": true,
"name": &"running",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gkdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivb5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uf5nj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjrg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tb86j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1ifk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktqkp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx1x8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_luxij")
}],
"loop": true,
"name": &"selling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_urfwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6oxjb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3wdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60vs3")
}],
"loop": true,
"name": &"standing",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4jn7u"]
size = Vector2(30.25, 44.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_2xcvr"]
radius = 112.0

[node name="merchant" type="CharacterBody2D"]
script = ExtResource("1_gh2xp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_kfu48")
animation = &"standing"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.875, 33.75)
shape = SubResource("RectangleShape2D_4jn7u")

[node name="conversationRange" type="Area2D" parent="."]
position = Vector2(0, 32)
collision_layer = 2
collision_mask = 2

[node name="convoRangeCollision" type="CollisionShape2D" parent="conversationRange"]
shape = SubResource("CircleShape2D_2xcvr")

[node name="toolTip" type="Label" parent="."]
offset_left = -72.0
offset_top = 80.0
offset_right = 70.0
offset_bottom = 103.0
text = "press enter to talk"

[connection signal="body_entered" from="conversationRange" to="." method="_on_conversation_range_body_entered"]
[connection signal="body_exited" from="conversationRange" to="." method="_on_conversation_range_body_exited"]
